Changing text strip "start" time by typing leads to flickering text at former time #75415

Closed
opened 2020-04-05 18:37:27 +02:00 by Andi McClure · 4 comments

System Information
Operating system: Mac OS X 10.13.6 (17G10021)
Graphics card: Intel Iris Graphics 6100
Blender Version
Broken: First encountered in 2.82, also tested in "Version 2.82a (2.82a 2020-03-12)", also tested in a nightly, the download page called it "Blender 2.83 Alpha, April 04, 23:21:36 - 505a19ed75, macOS 64 bit, 193.81MB". Bug reproduced the same in all 3.

Duration + 4 * 60

Short description of error

When I change the start position of a text strip in my video by manually entering a time, then replay the video up to the previous start time of the text strip, I see the text strip present but flickering at its old time (where it isn't supposed to be anymore).

Exact steps for others to reproduce the error

Here is a .blend file that recreates the one where I originally saw the error but I replaced the video with a still frame and packed it into the .blend.

defaults2-bugreport.blend

Open this file. Allow it to play for 9 or 10 seconds until you see the words "An interesting thing about it is". Pause the video. Select the "An interesting thing about it is" text strip. Go into the "Strip" tab on the right. Click on the "start time" to edit it. At the end of the current time, type "+4*60" and hit return. Hit the Jump to Start button. Press play. You will clearly see the text "An interesting thing about it is" flickering, right when it was originally present, even though you can see in the timeline view that the text strip is not there.

AN OBSERVATION: I do NOT see the bug if I change the start time of the text strip by dragging it. I only see the bug if I alter the start time by typing. If I alter the start time by typing it reproduces 100%.

You can ignore everything in this .blend file after the first 20 seconds.

Here is a video of me reproducing the bug in 2.83 Alpha 505a19ed75. I also have a video of reproducing the bug in 2.82a.

blenderbugflicker2.mov

**System Information** Operating system: Mac OS X 10.13.6 (17G10021) Graphics card: Intel Iris Graphics 6100 **Blender Version** Broken: First encountered in 2.82, also tested in "Version 2.82a (2.82a 2020-03-12)", also tested in a nightly, the download page called it "Blender 2.83 Alpha, April 04, 23:21:36 - 505a19ed75b2, macOS 64 bit, 193.81MB". Bug reproduced the same in all 3. Duration + 4 * 60 **Short description of error** When I change the start position of a text strip in my video by manually entering a time, then replay the video up to the previous start time of the text strip, I see the text strip present but flickering at its old time (where it isn't supposed to be anymore). **Exact steps for others to reproduce the error** Here is a .blend file that recreates the one where I originally saw the error but I replaced the video with a still frame and packed it into the .blend. [defaults2-bugreport.blend](https://archive.blender.org/developer/F8450717/defaults2-bugreport.blend) Open this file. Allow it to play for 9 or 10 seconds until you see the words "An interesting thing about it is". Pause the video. Select the "An interesting thing about it is" text strip. Go into the "Strip" tab on the right. Click on the "start time" to edit it. At the end of the current time, type "+4*60" and hit return. Hit the Jump to Start button. Press play. You will clearly see the text "An interesting thing about it is" flickering, right when it was originally present, even though you can see in the timeline view that the text strip is not there. AN OBSERVATION: I do *NOT* see the bug if I change the start time of the text strip by dragging it. I only see the bug if I alter the start time by typing. If I alter the start time by typing it reproduces 100%. You can ignore everything in this .blend file after the first 20 seconds. Here is a video of me reproducing the bug in 2.83 Alpha 505a19ed75b2. I also have a video of reproducing the bug in 2.82a. [blenderbugflicker2.mov](https://archive.blender.org/developer/F8450731/blenderbugflicker2.mov)
Author

Added subscriber: @mcc111

Added subscriber: @mcc111

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 5081556bb5

This issue was referenced by 5081556bb517961f513e6874b4040ab8e623f1d7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-04-12 22:34:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75415
No description provided.